--- a/存储模式综述.md
+++ b/存储模式综述.md
@@ -13,14 +13,9 @@ backgroundImage: url('https://marp.app/assets/hero-background.jpg')
 # 目录
 ![bg right:30%](https://cn.bing.com/th?id=OHR.SeaFireflies_ZH-CN5748822339_UHD.jpg)
 1. 概述
-   1. 存储模型概述
-   2. 数据处理应用场景概述
 2. 列存储查询优化分析
-   1. 块遍历
-   2. 压缩
-   3. 延迟物化
-   4. 不可见连接
-3. 参考
+3. 行式存储与列式存储的选择
+4. 参考
 
 ---
 ## 概述
@@ -55,7 +50,7 @@ backgroundImage: url('https://marp.app/assets/hero-background.jpg')
 
 ---
 ## 行存储与列存储的对比
->分析类查询往往只查询一个表里面很少的几个字段，Column-Store只需要从磁盘读取用户查询的Column，而Row-Store读取每一条记录的时候你会把所有Column的数据读出来，在IO上Column-Store比Row-Store效率高很多，因此性能更好。
+>分析类查询往往只查询一个表里面很少的几个字段，列存储只需要从磁盘读取用户查询的列，而行存储读取每一条记录的时候你会把所有列的数据读出来，在IO上列存储比行存储效率高很多，因此性能更好。
 - 列存储查询的四大优化方式：
   1. 块遍历(Block Interation)
   2. 压缩(Compression)
@@ -117,3 +112,32 @@ backgroundImage: url('https://marp.app/assets/hero-background.jpg')
 ### 不可见连接
 
 在很多时间维度表里面符合过滤条件的数据往往是连续的，连续的好处在于，它能把lookup join变成一个值的范围检查，范围检查比lookup join要快，原因很简单，范围检查只需要所算数运算就好了，不需要做lookup，因此可能大幅度的提高性能。
+
+---
+## 行式存储与列式存储的选择
+
+|            Row Store            |                 Column Store                  |
+| :-----------------------------: | :-------------------------------------------: |
+|  Majority of value are Unique   | unique values are repeating (for compression) |
+|      No Aggregation needed      |        Also when Aggregation is needed        |
+| When all records are to be Read |      Specific Column of Table to be Read      |
+|        Less Restrictive         |                More Selective                 |
+
+
+
+---
+
+## SAP HANA 主要特点
+
+
+
+
+---
+## 参考
+
+- Papers
+  - [Paper: Column-Stores vs. Row-Stores: How Different Are They Really?](http://www.inf.ufpr.br/eduardo/ensino/ci809/papers/p967-abadi.pdf)
+- Notes
+  - [Notes:《Column-Stores vs. Row-Stores》读后感](https://zhuanlan.zhihu.com/p/54433448)
+- Video
+  - [Video: When to Choose Row Vs Column Store in S/4HANA?](https://www.youtube.com/watch?v=9-QSXJz_Qpw)
