--- a/存储模式综述.md
+++ b/存储模式综述.md
@@ -80,13 +80,11 @@ backgroundImage: url('https://marp.app/assets/hero-background.jpg')
 
 延迟物化指的是将这个过程的时间尽量移到整个查询生命周期的末期。
 
----
-### 延迟物化举例
 `SELECT name FROM person WHERE id > 10 and age > 20`
 一般做法是从文件系统读出三列的数据，马上物化成一行行的person数据，然后应用两个过滤条件: id > 10 和 age > 20 , 过滤完了之后从数据里面抽出 name 字段，作为最后的结果。
 
 ---
-### 延迟物化举例
+### 延迟物化
 延迟物化的做法则会先不拼出行式数据，直接在列数据上分别应用两个过滤条件，从而得到两个满足过滤条件的bitmap, 然后再把两个bitmap做位与(bitwise AND)的操作得到同时满足两个条件的所有的bitmap，因为最后用户需要的只是 name 字段而已，因此下一步我们拿着这些 position 对 name 字段的数据进行过滤就得到了最终的结果。
 
 ---
@@ -118,16 +116,10 @@ backgroundImage: url('https://marp.app/assets/hero-background.jpg')
 
 |            Row Store            |                 Column Store                  |
 | :-----------------------------: | :-------------------------------------------: |
-|  Majority of value are Unique   | unique values are repeating (for compression) |
+|  Majority of value are Unique   | unique values are repeating(for compression) |
 |      No Aggregation needed      |        Also when Aggregation is needed        |
 | When all records are to be Read |      Specific Column of Table to be Read      |
 |        Less Restrictive         |                More Selective                 |
-
-
-
----
-
-## SAP HANA 主要特点
 
 
 
