--- a/存储模式综述.md
+++ b/存储模式综述.md
@@ -19,17 +19,16 @@ backgroundImage: url('https://marp.app/assets/hero-background.jpg')
 
 ---
 ## 概述
-目前数据存储系统的模式有两种方案可供选择：行存储(Row-Based)和列存储(Colimn-Based)。在不同的应用场景下，这两种存储模式体现出的优势是不一样的。
+目前数据存储系统的模式有两种方案可供选择：行存储(Row-Based)和列存储(Column-Based)。在不同的应用场景下，这两种存储模式体现出的优势是不一样的。
 
 ---
 ## 存储模型概述
-![bg right:40% w:90%](https://img-blog.csdn.net/20180706125239844?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L1hpbmd4aW54aW54aW4=/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70)
 行存储模型(N-ary Storage Model)：数据库管理系统将单个元组的所有属性连续的存储在一页上。
 列存储模型(Decomposition Storage Model)：数据库叫单个属性所有元组的值连续的存储在一页上。
 如右图所示。
 
 ---
-![bg w:90%](https://picb.zhimg.com/80/v2-f6b341f0aa6345e5fe7f1c3dc52da510_720w.jpg)
+![bg w:80%](https://img-blog.csdn.net/20180706125239844?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L1hpbmd4aW54aW54aW4=/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70)
 
 ---
 ## 数据处理应用场景概述
@@ -121,7 +120,10 @@ backgroundImage: url('https://marp.app/assets/hero-background.jpg')
 | When all records are to be Read |      Specific Column of Table to be Read      |
 |        Less Restrictive         |                More Selective                 |
 
+from : [When to Choose Row Vs Column Store in S/4HANA?](https://www.youtube.com/watch?v=9-QSXJz_Qpw)
 
+---
+## "Vertica" VS "SAP HANA"
 
 
 ---
